# aoc-2022

./: Cargo.toml  README.md
src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  main.rs  utils.rs
src/input/: 5.input  5.test
