[package]
name = "aoc"
version = "0.1.0"
authors = ["Jonathan Milligan"]
edition = "2021"
description = "Advent of Code 2022 solutions"
repository = "https://github.com/realprogrammersusevim/aoc-2022"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1.7.0"
